# Small_Language_Model

./: .gitignore  CMakeLists.txt  Makefile  PUBLICATION_CHECKLIST.md  README.md  benchmark.py  sample.txt  space_poem.txt
paper/: PAPER_README.md  paper.tex
src/: KGramStats.cpp  KGramStats.h  LanguageModel.cpp  LanguageModel.h  bindings.cpp  main.cpp
